// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppManagementView should disable buttons and display "Installing..." button text when installing app 1`] = `
<div>
  <div
    className="core-app-management-item list-group-item"
  >
    <h4
      className="list-group-item-heading"
    >
      Foo app
      <span
        className="list-group-item-heading-source-tag"
      />
    </h4>
    <div
      className="list-group-item-text"
    >
      <p>
        Foo description
      </p>
      <div
        className="core-app-management-item-footer"
      >
        <button
          className="btn btn-link core-btn-link"
          onClick={[Function]}
          type="button"
        >
          More information
        </button>
        <div
          className="core-app-management-item-buttons"
        >
          <button
            className="btn btn-primary core-btn"
            disabled={true}
            onClick={[Function]}
            title="Install Foo app"
            type="button"
          >
            <span
              className="mdi mdi-download"
            />
            <span
              className="core-btn-text"
            >
              Installing...
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppManagementView should disable buttons and display "Removing..." button text when removing app 1`] = `
<div>
  <div
    className="core-app-management-item list-group-item"
  >
    <h4
      className="list-group-item-heading"
    >
      Foo app
      <span
        className="list-group-item-heading-source-tag"
      />
    </h4>
    <div
      className="list-group-item-text"
    >
      <p>
        Foo description
      </p>
      <div
        className="core-app-management-item-footer"
      >
        <button
          className="btn btn-link core-btn-link"
          onClick={[Function]}
          type="button"
        >
          More information
        </button>
        <div
          className="core-app-management-item-status installed"
        >
          Installed
        </div>
        <div
          className="core-app-management-item-buttons"
        >
          <div />
          <button
            className="btn btn-primary core-btn"
            disabled={true}
            onClick={[Function]}
            title="Remove Foo app"
            type="button"
          >
            <span
              className="mdi mdi-trash-can"
            />
            <span
              className="core-btn-text"
            >
              Removing...
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppManagementView should disable buttons and display "Upgrading..." button text when upgrading app 1`] = `
<div>
  <div
    className="core-app-management-item list-group-item"
  >
    <h4
      className="list-group-item-heading"
    >
      Foo app
      <span
        className="list-group-item-heading-source-tag"
      />
    </h4>
    <div
      className="list-group-item-text"
    >
      <p>
        Foo description
      </p>
      <div
        className="core-app-management-item-footer"
      >
        <button
          className="btn btn-link core-btn-link"
          onClick={[Function]}
          type="button"
        >
          More information
        </button>
        <div
          className="core-app-management-item-status upgrade-available"
        >
          Upgrade available
        </div>
        <div
          className="core-app-management-item-buttons"
        >
          <button
            className="btn btn-primary core-btn"
            disabled={true}
            onClick={[Function]}
            title="Upgrade Foo app from v1.2.3 to v1.2.4"
            type="button"
          >
            <span
              className="mdi mdi-download"
            />
            <span
              className="core-btn-text"
            >
              Upgrading...
            </span>
          </button>
          <button
            className="btn btn-primary core-btn"
            disabled={true}
            onClick={[Function]}
            title="Remove Foo app"
            type="button"
          >
            <span
              className="mdi mdi-trash-can"
            />
            <span
              className="core-btn-text"
            >
              Remove
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppManagementView should render not-installed, installed, and upgradable apps sorted by name 1`] = `
<div>
  <div
    className="core-app-management-item list-group-item"
  >
    <h4
      className="list-group-item-heading"
    >
      App A
      <span
        className="list-group-item-heading-source-tag"
      />
    </h4>
    <div
      className="list-group-item-text"
    >
      <p>
        appA description
      </p>
      <div
        className="core-app-management-item-footer"
      >
        <button
          className="btn btn-link core-btn-link"
          onClick={[Function]}
          type="button"
        >
          More information
        </button>
        <div
          className="core-app-management-item-status upgrade-available"
        >
          Upgrade available
        </div>
        <div
          className="core-app-management-item-buttons"
        >
          <button
            className="btn btn-primary core-btn"
            disabled={false}
            onClick={[Function]}
            title="Upgrade App A from v1.2.3 to v1.2.4"
            type="button"
          >
            <span
              className="mdi mdi-download"
            />
            <span
              className="core-btn-text"
            >
              Upgrade
            </span>
          </button>
          <button
            className="btn btn-primary core-btn"
            disabled={false}
            onClick={[Function]}
            title="Remove App A"
            type="button"
          >
            <span
              className="mdi mdi-trash-can"
            />
            <span
              className="core-btn-text"
            >
              Remove
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="core-app-management-item list-group-item"
  >
    <h4
      className="list-group-item-heading"
    >
      App B
      <span
        className="list-group-item-heading-source-tag"
      />
    </h4>
    <div
      className="list-group-item-text"
    >
      <p>
        appB description
      </p>
      <div
        className="core-app-management-item-footer"
      >
        <button
          className="btn btn-link core-btn-link"
          onClick={[Function]}
          type="button"
        >
          More information
        </button>
        <div
          className="core-app-management-item-buttons"
        >
          <button
            className="btn btn-primary core-btn"
            disabled={false}
            onClick={[Function]}
            title="Install App B"
            type="button"
          >
            <span
              className="mdi mdi-download"
            />
            <span
              className="core-btn-text"
            >
              Install
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="core-app-management-item list-group-item"
  >
    <h4
      className="list-group-item-heading"
    >
      App C
      <span
        className="list-group-item-heading-source-tag"
      />
    </h4>
    <div
      className="list-group-item-text"
    >
      <p>
        appC description
      </p>
      <div
        className="core-app-management-item-footer"
      >
        <button
          className="btn btn-link core-btn-link"
          onClick={[Function]}
          type="button"
        >
          More information
        </button>
        <div
          className="core-app-management-item-status installed"
        >
          Installed
        </div>
        <div
          className="core-app-management-item-buttons"
        >
          <div />
          <button
            className="btn btn-primary core-btn"
            disabled={false}
            onClick={[Function]}
            title="Remove App C"
            type="button"
          >
            <span
              className="mdi mdi-trash-can"
            />
            <span
              className="core-btn-text"
            >
              Remove
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppManagementView should render spinner when retrieving apps 1`] = `
<div
  className="core-loading-apps-spinner"
/>
`;

exports[`AppManagementView should render without any apps 1`] = `<div />`;
